Bug 132902 - Pb to display some fields of a column (gtk3 only)
Summary: Pb to display some fields of a column (gtk3 only)
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Base (show other bugs)
Version:
(earliest affected)
7.0.0.0.alpha0+
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:7.0.0
Keywords:
Depends on:
Blocks:
 
Reported: 2020-05-10 07:47 UTC by Julien Nabet
Modified: 2020-05-11 20:32 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
screenshot with gen rendering (7.91 KB, image/png)
2020-05-10 07:55 UTC, Julien Nabet
Details
screenshot with gtk3 rendering (11.19 KB, image/png)
2020-05-10 07:55 UTC, Julien Nabet
Details
screenshot (16.63 KB, image/png)
2020-05-11 16:47 UTC, Julien Nabet
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Julien Nabet 2020-05-10 07:47:27 UTC
Description:
On pc Debian x86-64 with master sources updated today + gtk3 rendering, there are some pb to display fields of a column.

I don't reproduce these pbs with gen rendering.

Steps to Reproduce:
1. Open Base
2. Create a brand new odb file (embedded hsqldb)
3. Create a table with Design
4. Field Name = ID
5. Field Type = INTEGER
=> notice "Entry required" (bottom panel) has no info

6. add another column with Field Name = name and Field Type = VARCHAR
=> Same remark for "Entry required"

7. Click first field (ID)
=> Notice this time there's still "Entry required" + "AutoValue" with no info

Actual Results:
See description

Expected Results:
"Entry required" and "AutoValue" should have a value


Reproducible: Always


User Profile Reset: No



Additional Info:
Version: 7.0.0.0.alpha1+
Build ID: 9bfdad316d3ccff1eb6355c2ab4ad6c70cfe596b
CPU threads: 12; OS: Linux 5.6; UI render: default; VCL: gtk3; 
Locale: fr-FR (fr_FR.UTF-8); UI: en-US
Calc: threaded
Comment 1 Julien Nabet 2020-05-10 07:48:05 UTC
I noticed these kinds of logs during tests:
(soffice:18031): Gtk-CRITICAL **: 09:43:55.506: gtk_tree_model_get_n_columns: assertion 'GTK_IS_TREE_MODEL (tree_model)' failed

(soffice:18031): Gtk-CRITICAL **: 09:43:55.506: gtk_list_store_insert_with_values: assertion 'GTK_IS_LIST_STORE (list_store)' failed

(soffice:18031): Gtk-CRITICAL **: 09:43:55.506: gtk_list_store_insert_with_values: assertion 'GTK_IS_LIST_STORE (list_store)' failed

(soffice:18031): Gtk-CRITICAL **: 09:43:55.506: gtk_cell_view_set_displayed_row: assertion 'GTK_IS_TREE_MODEL (cell_view->priv->model)' failed

(soffice:18031): Gtk-CRITICAL **: 09:43:55.506: gtk_cell_view_set_displayed_row: assertion 'GTK_IS_TREE_MODEL (cell_view->priv->model)' failed

(soffice:18031): Gtk-CRITICAL **: 09:44:49.186: gtk_cell_view_set_displayed_row: assertion 'GTK_IS_TREE_MODEL (cell_view->priv->model)' failed

(soffice:18031): Gtk-CRITICAL **: 09:44:49.189: gtk_list_store_clear: assertion 'GTK_IS_LIST_STORE (list_store)' failed

(soffice:18031): Gtk-CRITICAL **: 09:44:49.189: gtk_list_store_clear: assertion 'GTK_IS_LIST_STORE (list_store)' failed

** (soffice:18031): WARNING **: 09:44:49.297: Focused object has invalid index in parent

** (soffice:18031): WARNING **: 09:44:49.298: Focused object has invalid index in parent
Comment 2 Julien Nabet 2020-05-10 07:48:52 UTC
Caolán: thought you might be interested in this one since it's specific to gtk3.
Comment 3 Julien Nabet 2020-05-10 07:55:14 UTC
Created attachment 160583 [details]
screenshot with gen rendering
Comment 4 Julien Nabet 2020-05-10 07:55:36 UTC
Created attachment 160584 [details]
screenshot with gtk3 rendering
Comment 5 Caolán McNamara 2020-05-10 20:32:23 UTC
hmm, yes, this is probably a problem from 

commit bc0e0f633b05c4f91b6695488fc9e5c127507ba5
Author: Caolán McNamara <caolanm@redhat.com>
Date:   Thu Apr 9 11:41:00 2020 +0100

    tdf#131120 use a replacement for GtkComboBox

where the model was moved out of the combobox to use in its replacement, we probably need to put it back when we're finished or dup it or something of that nature
Comment 6 Commit Notification 2020-05-11 14:47:09 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/0c50447a94d092d1c19edb1bdebf9bf6dde3ae0f

Resolves: tdf#132902 restore original hierarchy in dtor

It will be available in 7.0.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Julien Nabet 2020-05-11 16:47:14 UTC
Created attachment 160681 [details]
screenshot

Caolán: "Autovalue" and "Entry required" are ok now. thank you!

Nitpick: I noticed that the second "p" of Properties is cropped by bottom.
Should I submit a new bugtracker or could it be a patch related to this one?
Comment 8 Caolán McNamara 2020-05-11 20:20:08 UTC
I imagine that's ~always been like that, its from the bare "15" used in dbaccess/source/ui/tabledesign/TableFieldDescWin.cxx which still uses non-welded or even non-layout aware widget layout. If that gets converted to native widgetry it'll get fixed as part of that.
Comment 9 Julien Nabet 2020-05-11 20:32:59 UTC
(In reply to Caolán McNamara from comment #8)
> I imagine that's ~always been like that, its from the bare "15" used in
> dbaccess/source/ui/tabledesign/TableFieldDescWin.cxx which still uses
> non-welded or even non-layout aware widget layout. If that gets converted to
> native widgetry it'll get fixed as part of that.

No pb, let's wait welding process, it's just nitpick.