Resolves: tdf#132902 restore original hierarchy in dtor

so a repeated weld will result in the same layout each time

Change-Id: I9ba41e70c29046b84392280d4bd95f8141b24251
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/93953
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolanm@redhat.com>